[package]
name = "syntax-tree"
version = "0.1.0"
authors = ["Benjamin Eder <barny.eder@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tree structure managing syntax/format information for text"
readme = "README.md"
repository = "https://github.com/bennyboer/syntax-tree"

[dependencies]
